// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`integration:constructs/comment > block > should tokenize block comment (unterminated) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 comment "/* i++ " (1:1-1:8, 0-7)
│     whitespace: ""
│     kind: "block"
└─2 eof null (1:8-1:8, 7-7)
      whitespace: ""
`;

exports[`integration:constructs/comment > block > should tokenize block comment 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 comment "/* i++ */" (1:1-1:10, 0-9)
│     whitespace: ""
│     kind: "block"
└─2 eof null (1:10-1:10, 9-9)
      whitespace: ""
`;

exports[`integration:constructs/comment > docblock > should tokenize docblock comment (unterminated) 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 comment "/**\\n * @file Constructs - comment\\n * @module esast-util-from-code/constructs/comment\\n " (1:1-4:2, 0-86)
│     whitespace: ""
│     kind: "docblock"
└─2 eof null (4:2-4:2, 86-86)
      whitespace: ""
`;

exports[`integration:constructs/comment > docblock > should tokenize docblock comment 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 comment "/**\\n * @file Constructs - comment\\n * @module esast-util-from-code/constructs/comment\\n */" (1:1-4:4, 0-88)
│     whitespace: ""
│     kind: "docblock"
└─2 eof null (4:4-4:4, 88-88)
      whitespace: ""
`;

exports[`integration:constructs/comment > hashbang > should tokenize hashbang comment 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 comment "#!/usr/bin/env node" (1:1-1:20, 0-19)
│     whitespace: ""
│     kind: "hashbang"
└─2 eof null (2:1-2:1, 20-20)
      whitespace: "\\r"
`;

exports[`integration:constructs/comment > line > should tokenize line comment 1`] = `
tokens[3]
├─0 sof null (1:1-1:1, 0-0)
│     whitespace: ""
├─1 comment "// const j = k + 3" (1:1-1:19, 0-18)
│     whitespace: ""
│     kind: "line"
└─2 eof null (1:19-1:19, 18-18)
      whitespace: ""
`;
